minidump-rustwalk: update to 0.22.2

--- a/mingw-w64-minidump-stackwalk/PKGBUILD
+++ b/mingw-w64-minidump-stackwalk/PKGBUILD
@@ -4,7 +4,7 @@ _realname=minidump-stackwalk
 _projectname=rust-minidump
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.20.0
+pkgver=0.22.2
 pkgrel=1
 pkgdesc="Provides both machine-readable and human-readable digests of a minidump, with backtraces and symbolication (mingw-w64)"
 arch=('any')
@@ -15,38 +15,37 @@ msys2_references=(
   'purl: pkg:cargo/minidump-stackwalk'
 )
 license=('spdx:MIT')
-makedepends=(
-  "${MINGW_PACKAGE_PREFIX}-rust"
-)
+makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 source=("https://github.com/rust-minidump/rust-minidump/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('a303e3267c5b9aaf717950b7d4887c35def92c6b92aa03f3143f6983491adabf')
+sha256sums=('c9801651a60f435c69c3dc326e80715275c8177544a93d26fc36c455f8e15e1f')
 
 prepare() {
-  cp -r "${_projectname}-${pkgver}" "build-${MSYSTEM}"
-  cd "build-${MSYSTEM}/minidump-stackwalk"
+  cp -r "${_projectname}-${pkgver}" "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
 
-  cargo fetch \
-    --locked \
-    --target "$(rustc -vV | sed -n 's/host: //p')" \
-    --manifest-path "../Cargo.toml"
+  cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd "build-${MSYSTEM}/minidump-stackwalk"
+  cd "build-${MSYSTEM}"
 
-  cargo build \
-    --release \
-    --frozen \
-    --manifest-path "../Cargo.toml"
+  cargo build --release --frozen -p minidump-stackwalk
+}
+
+check() {
+  cd "build-${MSYSTEM}"
+
+  cargo test --release --frozen -p minidump-stackwalk
 }
 
 package() {
-  cd "build-${MSYSTEM}/minidump-stackwalk"
+  cd "build-${MSYSTEM}"
 
   cargo install \
     --frozen \
     --offline \
     --no-track \
-    --path . \
+    --path minidump-stackwalk \
     --root "${pkgdir}${MINGW_PREFIX}"
+
+  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
