--- a/mingw-w64-helix/PKGBUILD
+++ b/mingw-w64-helix/PKGBUILD
@@ -14,7 +14,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-mdbook"
              "git")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
-optdepends=("${MINGW_PACKAGE_PREFIX}-rust-analuzer: Rust LSP"
+optdepends=("${MINGW_PACKAGE_PREFIX}-rust-analyzer: Rust LSP"
             "${MINGW_PACKAGE_PREFIX}-clang: for clangd"
             "${MINGW_PACKAGE_PREFIX}-lldb: for lldb-dap")
 source=("$url/archive/$pkgver/${_realname}-${pkgver}.tar.gz"
