--- a/mingw-w64-helix/PKGBUILD
+++ b/mingw-w64-helix/PKGBUILD
@@ -4,7 +4,7 @@ _realname=helix
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=24.07
-pkgrel=2
+pkgrel=3
 pkgdesc="A post-modern modal text editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,6 +14,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-mdbook"
              "git")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
+optdepends=("${MINGW_PACKAGE_PREFIX}-rust-analyzer: Rust LSP"
+            "${MINGW_PACKAGE_PREFIX}-clang: for clangd"
+            "${MINGW_PACKAGE_PREFIX}-lldb: for lldb-dap")
 source=("$url/archive/$pkgver/${_realname}-${pkgver}.tar.gz"
         'icon.patch'
         'disable-lto.patch'
