mingw-w64: update to 12.0.0.r351.gcdf6b16b8

--- a/mingw-w64-winpthreads-git/PKGBUILD
+++ b/mingw-w64-winpthreads-git/PKGBUILD
@@ -5,9 +5,9 @@
 _realname=winpthreads
 pkgbase=mingw-w64-${_realname}-git
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-git" "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
-pkgver=12.0.0.r335.g6cd6fee9c
+pkgver=12.0.0.r351.gcdf6b16b8
 pkgrel=1
-_commit='6cd6fee9c063c50917618ded6e7e31246a7714ee'
+_commit='cdf6b16b805ce7d02f6b1b742911ba0770b49bbb'
 pkgdesc="MinGW-w64 winpthreads library (mingw-w64)"
 url="https://www.mingw-w64.org/"
 msys2_repository_url="https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-libraries/winpthreads"
@@ -27,7 +27,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         "0001-Define-__-de-register_frame_info-in-fake-libgcc_s.patch")
-sha256sums=('b1d3515160c81dabb7cfda1120b616be4fd1b50bac2a7a7d441849083c17e159'
+sha256sums=('3ade06aac627d1310236bd57031c076ff18583d2f4b31caa88ae9a2d04ca5501'
             '2e779bcc60a1422b23e0cfdb5c0f6851f2382592bb4675d08a6bdef78d5e5c10')
 
 pkgver() {
