--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=crt
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r335.g6cd6fee9c
+pkgver=12.0.0.r351.gcdf6b16b8
 pkgrel=1
-_commit='6cd6fee9c063c50917618ded6e7e31246a7714ee'
+_commit='cdf6b16b805ce7d02f6b1b742911ba0770b49bbb'
 pkgdesc='MinGW-w64 CRT for Windows (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -22,7 +22,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('b1d3515160c81dabb7cfda1120b616be4fd1b50bac2a7a7d441849083c17e159')
+sha256sums=('3ade06aac627d1310236bd57031c076ff18583d2f4b31caa88ae9a2d04ca5501')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
