--- a/mingw-w64-libarchive/PKGBUILD
+++ b/mingw-w64-libarchive/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=libarchive
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.7.6
+pkgver=3.7.7
 pkgrel=1
 pkgdesc="Multi-format archive and compression library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://www.libarchive.org/"
+msys2_repository_url='https://github.com/libarchive/libarchive/'
 msys2_references=(
   "cpe: cpe:/a:libarchive:libarchive"
 )
@@ -26,7 +27,7 @@ depends=(${MINGW_PACKAGE_PREFIX}-gcc-libs
          ${MINGW_PACKAGE_PREFIX}-zlib
          ${MINGW_PACKAGE_PREFIX}-zstd)
 source=("https://github.com/libarchive/libarchive/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('0a2efdcb185da2eb1e7cd8421434cb9a6119f72417a13335cca378d476fd3ba0')
+sha256sums=('879acd83c3399c7caaee73fe5f7418e06087ab2aaf40af3e99b9e29beb29faee')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
