--- a/mingw-w64-python-inflect/PKGBUILD
+++ b/mingw-w64-python-inflect/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=inflect
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=7.3.1
+pkgver=7.4.0
 pkgrel=1
 pkgdesc='Python module to correctly generate plurals, ordinals, indefinite articles; convert numbers to words (mingw-w64)'
 arch=('any')
@@ -19,10 +19,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('edd785148a673b0c6dfef1a7d80cc1bcb2dd6d041cdb313b60032e464fd4e808')
+sha256sums=('904baa17cc2cb74827a6c27b95692e95670dadc72b208b3e8c1c05aeed47026b')
 
 build() {
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
