python-similarity_measures: update to 1.2.0

--- a/mingw-w64-python-similarity_measures/PKGBUILD
+++ b/mingw-w64-python-similarity_measures/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=similarity_measures
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.1.0
-pkgrel=2
+pkgver=1.2.0
+pkgrel=1
 pkgdesc="Quantify the difference between two arbitrary curves (mingw64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -19,18 +19,12 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-scipy")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
-source=("https://github.com/cjekel/similarity_measures/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('E89617605A9AF04CF059CD177E71647175F8C1CB8EC452F31E9C3CDC8C13EB35')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/_/}/${_realname/_/}-${pkgver}.tar.gz")
+sha256sums=('3734e8d2d0fbffbc288e94886fa7c19421ed8a7b7c12b52dc3556b75bebe0a8d')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname/_/}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
