Apply suggestions from code review
Thank you @lazka

Co-authored-by: Christoph Reiter <reiter.christoph@gmail.com>

--- a/mingw-w64-python-archinfo/PKGBUILD
+++ b/mingw-w64-python-archinfo/PKGBUILD
@@ -9,10 +9,10 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/angr/archinfo"
 license=('BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
-  "${MINGW_PACKAGE_PREFIX}-python-wheel"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
 optdepends=(
@@ -23,14 +23,7 @@ optdepends=(
 )
 source=("${url}/archive/v${pkgver}/${_pyname}-${pkgver}.tar.gz")
 sha512sums=('171b236e64ab11b26a229f0f241337fadf57ec0f26a45e2001fa3972ca7912955ba951c4344312ee868de8f09c0872adbe8fa543cd9b505c985c52aabdc404a8')
-b2sums=('73541dd9b3bf2b56bcdc5d7b2dbdbe2867d14fd589ac8a176a39ac92c1f1be5190417244975a4ad0131e275885466c73d53a5bd69151bc0d1f327c6d9b793e34')
 
-prepare() {
-  cd "${_pyname}-${pkgver}"
-
-  # (OPTIONAL) If setuptools-scm is used, set version
-  # export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
-}
 
 build() {
   cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
