postgresql: remove no longer needed patch.
The patch is no longer required after the issue in mingw-w64 was fixed by https://github.com/mingw-w64/mingw-w64/commit/797b4a6b

--- a/mingw-w64-postgresql/PKGBUILD
+++ b/mingw-w64-postgresql/PKGBUILD
@@ -4,7 +4,7 @@ _realname=postgresql
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=17.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Libraries for use with PostgreSQL (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -40,12 +40,10 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-libxslt: XML plugin"
             "${MINGW_PACKAGE_PREFIX}-tcl: for PL/Tcl support")
 source=("https://ftp.postgresql.org/pub/source/v${pkgver}/postgresql-${pkgver}.tar.bz2"
         postgresql-13.1-disable-wsa-invalid-event-static-assert.patch
-        postgresql-14.0-use-mingw-setjmp-on-ucrt.patch
-        postgresql-17.0-fix-build-on-mingw64.patch)
+        postgresql-14.0-use-mingw-setjmp-on-ucrt.patch)
 sha256sums=('7e276131c0fdd6b62588dbad9b3bb24b8c3498d5009328dba59af16e819109de'
             '72c14a78eeafdd3c9a13c3e124b1941b5da090488c7bd73f08b3cd78bacd07d5'
-            'fe336eac7892b23988189be0178efc95449d8d08493db83754058f5f37bb8ea9'
-            '949406ec785dc4c062e9b94c49927060595b63d72fe35c7e86f2b67b3e91044d')
+            'fe336eac7892b23988189be0178efc95449d8d08493db83754058f5f37bb8ea9')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -61,8 +59,7 @@ prepare() {
 
   apply_patch_with_msg \
     postgresql-13.1-disable-wsa-invalid-event-static-assert.patch \
-    postgresql-14.0-use-mingw-setjmp-on-ucrt.patch \
-    postgresql-17.0-fix-build-on-mingw64.patch
+    postgresql-14.0-use-mingw-setjmp-on-ucrt.patch
 }
 
 build() {
