--- a/mingw-w64-soundtouch/PKGBUILD
+++ b/mingw-w64-soundtouch/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=soundtouch
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.3.2
+pkgver=2.3.3
 pkgrel=1
 pkgdesc="An audio processing library (mingw-w64)"
 arch=('any')
@@ -19,16 +19,21 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 options=('strip' 'staticlibs')
 source=(https://www.surina.net/${_realname}/${_realname}-${pkgver}.tar.gz
         0001-no-undefined-on.mingw.patch
-        0003-fix-docdir.mingw.patch)
-sha256sums=('3bde8ddbbc3661f04e151f72cf21ca9d8f8c88e265833b65935b8962d12d6b08'
+        0003-fix-docdir.mingw.patch
+        0004-missing-municode.patch)
+noextract=(${_realname}-${pkgver}.tar.gz)
+sha256sums=('43b23dfac2f64a3aff55d64be096ffc7b73842c3f5665caff44975633a975a99'
             '76b3041e952675e56138461c5fa8a5abacac31380ce90b27038d0deac46f91be'
-            '2cd136046831f3ad9a2e37c0afe3ecd9f25ce27f5dbf4ee8b23b862a96e76cd5')
+            '2cd136046831f3ad9a2e37c0afe3ecd9f25ce27f5dbf4ee8b23b862a96e76cd5'
+            '876b8bc6ba99b35b0b13fe963aacf9c7f82a8c7c53b9e8c678aee9af7607c15f')
 
 prepare() {
+  bsdtar -xf ${_realname}-${pkgver}.tar.gz || true
+
   cd "${srcdir}/${_realname}"
-  sed -i 's/AM_CONFIG_HEADER/AC_CONFIG_HEADER/' configure.ac
   patch -p1 -i ${srcdir}/0001-no-undefined-on.mingw.patch
   patch -p1 -i ${srcdir}/0003-fix-docdir.mingw.patch
+  patch -p1 -i ${srcdir}/0004-missing-municode.patch
 
   ./bootstrap
 }
