--- a/mingw-w64-librsvg/PKGBUILD
+++ b/mingw-w64-librsvg/PKGBUILD
@@ -33,12 +33,14 @@ source=("https://download.gnome.org/sources/librsvg/${pkgver%.*}/${_realname}-${
         "glib-0.20.0.tar.gz::https://crates.io/api/v1/crates/glib/0.20.0/download"
         "glib-rs.patch"
         "0002-avoid-link-whole.patch"
-        "0004-add-option-for-disabling-convert.patch")
+        "0004-add-option-for-disabling-convert.patch"
+        "0005-update-clang-rust-target.patch")
 sha256sums=('6116267c7ddabfd4daaf1c341326da0a773139a7223e885ae40ee09bd6986ef6'
             'fee90a615ce05be7a32932cfb8adf2c4bbb4700e80d37713c981fb24c0c56238'
             'e0f5accba0ff47d9cdf79f506ea76ea0b373edaf6845a23180a00c15e0a8691d'
             '4cb597eef01a636ad7007b3a47b76e395f30b2347183b5acb1af94d39577a239'
-            '0e042886d313b37f5db5e0405a5e37b3d3e4a6c66f94186677406136fa0e7a17')
+            '0e042886d313b37f5db5e0405a5e37b3d3e4a6c66f94186677406136fa0e7a17'
+            '0bbfddf52999ca9f1ac94c732a4b361528d48b3298f7126ec184c58bc94904eb')
 msys2_repository_url="https://gitlab.gnome.org/GNOME/librsvg"
 noextract=("${_realname}-${pkgver}.tar.xz")
 
@@ -60,6 +62,9 @@ prepare() {
 
   # fails to link for the static build, so skip for now
   patch -p1 -i "${srcdir}/0004-add-option-for-disabling-convert.patch"
+
+  # https://github.com/msys2/MINGW-packages/pull/21901#issuecomment-2412443698
+  patch -p1 -i "${srcdir}/0005-update-clang-rust-target.patch"
 
   echo "" >> Cargo.toml
   echo "[patch.crates-io]" >> Cargo.toml
