gnustep-gui: import patch to fix issue with nscell not populating

--- a/mingw-w64-gnustep-gui/PKGBUILD
+++ b/mingw-w64-gnustep-gui/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gnustep-gui
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.31.1
-pkgrel=2
+pkgrel=3
 pkgdesc="GNUstep GUI Library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -22,11 +22,19 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libtiff")
-source=("https://github.com/gnustep/libs-gui/releases/download/gui-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('b5bf50bf86a391e541d3d37fe600175e95e5a004180d43b55aee9ca1d575e8f9')
+source=("https://github.com/gnustep/libs-gui/releases/download/gui-${pkgver//./_}/${_realname}-${pkgver}.tar.gz"
+        # GSCodingFlags incorrectly packed on MSYS2 (merged to master)
+        "https://github.com/gnustep/libs-gui/commit/4d508632758f72b43e2a1450fa24d861dc9eecbd.diff"
+        # Fix NSSliderCell not handling integerValue on MSYS2 (merged to master)
+        "https://github.com/gnustep/libs-gui/commit/3b02ac1d9da1a8184c4a5d27999f95ee5bf34719.diff")
+sha256sums=('b5bf50bf86a391e541d3d37fe600175e95e5a004180d43b55aee9ca1d575e8f9'
+            '695acc856f24c5910d7f0c7550729f15f2b7ce2fd773ab5726d198b6cd225770'
+            'b314604367f99333d0a185e68173702f50b5afad5e9d1d5d1cfef46017fa8732')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
+  patch -p1 -i ${srcdir}/4d508632758f72b43e2a1450fa24d861dc9eecbd.diff
+  patch -p1 -i ${srcdir}/3b02ac1d9da1a8184c4a5d27999f95ee5bf34719.diff
 }
 
 build() {
