cpr: update to 1.11.0

--- a/mingw-w64-cpr/PKGBUILD
+++ b/mingw-w64-cpr/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=cpr
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.10.5
+pkgver=1.11.0
 pkgrel=1
 pkgdesc='C++ Requests: Curl for People, a spiritual port of Python Requests (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/libcpr/cpr'
+msys2_repository_url='https://github.com/libcpr/cpr'
+url='https://docs.libcpr.org/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-curl")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -16,8 +17,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=(${_realname}-${pkgver}.tar.gz::https://github.com/libcpr/cpr/archive/${pkgver}.tar.gz
         002-No-Werror.patch)
-sha256sums=('c8590568996cea918d7cf7ec6845d954b9b95ab2c4980b365f582a665dea08d8'
-            'aa85fc5c479397a96a24522719d46eb1cad175061f445979924a650597dbd68e')
+sha256sums=('fdafa3e3a87448b5ddbd9c7a16e7276a78f28bbe84a3fc6edcfef85eca977784'
+            'e31479f4bf83f30e4d0407b6e1a4431f22aa77c0ad5bd19e4989056dea73663d')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -48,6 +49,8 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
+      -DBUILD_SHARED_LIBS=ON \
+      -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
       -DCPR_USE_SYSTEM_CURL=ON \
       ../${_realname}-${pkgver}
 
