python-colour-science: update to 0.4.6

--- a/mingw-w64-python-colour-science/PKGBUILD
+++ b/mingw-w64-python-colour-science/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=colour-science
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.4.4
-pkgrel=2
+pkgver=0.4.6
+pkgrel=1
 pkgdesc="Python library for a multitude of colour science applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -23,7 +23,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-typing_extensions")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
+             "${MINGW_PACKAGE_PREFIX}-python-hatchling")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-matplotlib"
             "${MINGW_PACKAGE_PREFIX}-python-networkx"
             "${MINGW_PACKAGE_PREFIX}-python-pandas"
@@ -31,19 +31,11 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-python-matplotlib"
             "${MINGW_PACKAGE_PREFIX}-python-trimesh")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python-${_realname//-science/}")
 options=('!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz"
-        "001-accept-numpy-2.patch")
-sha256sums=('a3cb3b8e8a51db82b62524173d65ae70396bfa943636e111e50fb7cc125857ad'
-            '999dd2fdf4ec803ff1d44e0a87bb8ce815b5053141bf7dc422e92dc7442232e3')
-
-prepare() {
-  cd ${_realname/-/_}-${pkgver}
-  patch -p1 -i "${srcdir}"/001-accept-numpy-2.patch
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('be98c2c9b2a5caf0c443431f402599ca9e1cc7d944bb804156803bcc97af4cf0')
 
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
-
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
