libtre: Update to 0.9.0
* replace libtre-git, because we want to get rid of -git and there is a release now
* 001-autotools.patch: remove autotools changes, seems to build fine without it

--- a/mingw-w64-libtre/PKGBUILD
+++ b/mingw-w64-libtre/PKGBUILD
@@ -3,12 +3,13 @@
 # Contributor: Mario Emmenlauer <memmenlauer@biodataanalysis.de>
 
 _realname=libtre
-pkgbase=mingw-w64-${_realname}-git
-pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=r177.07e66d0
-pkgrel=2
+pkgbase=mingw-w64-${_realname}
+pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
+provides=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
+conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
+replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
+pkgver=0.9.0
+pkgrel=1
 pkgdesc="The approximate regex matching library and agrep command line tool (mingw-w64)"
 url="https://github.com/laurikari/tre"
 arch=('any')
@@ -17,17 +18,12 @@ license=('BSD')
 options=(strip staticlibs)
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "git" "${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-gettext-tools")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs" "${MINGW_PACKAGE_PREFIX}-gettext-runtime")
-source=("${_realname}"::"git+https://github.com/laurikari/tre.git#commit=07e66d0"
+source=("${_realname}"::"git+https://github.com/laurikari/tre.git#tag=v${pkgver}"
         001-autotools.patch
         002-pointer-cast.patch)
-sha256sums=('SKIP'
-            '27dd39270d94c6463ec0bc9a8478b7121c6f338f72c3cc552c004acbb6b8de9c'
+sha256sums=('81ac859d391cfd1a240a23ac1b7bda51cee7b75103cf03015cea9ea0b3492c3d'
+            '0fca8835867ccd669aa572d3fe25db8e45f33d93c17ee9c00e50cfab23e78dd1'
             '72c87b956eade17ed5444c3c6eae7be09b93d145573f20017ec590d9c2516c52')
-
-pkgver() {
-  cd "${srcdir}/${_realname}"
-  printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
-}
 
 prepare() {
   cd "${_realname}"
