postgis: update to 3.5.0
Fixes #22209

--- a/mingw-w64-postgis/PKGBUILD
+++ b/mingw-w64-postgis/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=postgis
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.4.1
-pkgrel=2
+pkgver=3.5.0
+pkgrel=1
 pkgdesc="Spatial and Geographic objects for PostgreSQL (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -20,9 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-libxslt")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-geos"
-         "${MINGW_PACKAGE_PREFIX}-gettext"
+         "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
          "${MINGW_PACKAGE_PREFIX}-json-c"
+         "${MINGW_PACKAGE_PREFIX}-libiconv"
          "${MINGW_PACKAGE_PREFIX}-libxml2"
+         "${MINGW_PACKAGE_PREFIX}-pcre2"
          "${MINGW_PACKAGE_PREFIX}-postgresql"
          #"${MINGW_PACKAGE_PREFIX}-protobuf-c"
          "${MINGW_PACKAGE_PREFIX}-proj"
@@ -33,7 +35,7 @@ source=("https://download.osgeo.org/postgis/source/${_realname}-${pkgver}.tar.gz
         0001-clang-postgresql.patch
         0002-disable-doc.patch
         0003-remove-redeclaration.patch)
-sha256sums=('fef6a141213d0ff27bf45b33b849cc396c22ddb1ffc6fed435469c9e891fc81d'
+sha256sums=('ca698a22cc2b2b3467ac4e063b43a28413f3004ddd505bdccdd74c56a647f510'
             '3cd5a095cd4de7cb7d5f5fa9dbc02dfe02297ae1743c2961e70d9110d214f64f'
             '5e3a39bdacbbb6825206df61c49a0479da8d6201ff78423fc0bdbeaf44b70e3d'
             '69bfda9f0021bce623eba952f423801fde618cc4913197dcb79a78d9cf0265b6'
@@ -83,4 +85,6 @@ build() {
 package() {
   cd "${srcdir}"/build-${MSYSTEM}
   make DESTDIR="${pkgdir}" install
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/COPYING \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
