scotch: add new patch - suffix name

--- a/mingw-w64-scotch/PKGBUILD
+++ b/mingw-w64-scotch/PKGBUILD
@@ -17,18 +17,20 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
 	     "${MINGW_PACKAGE_PREFIX}-ninja"
-             $([[ ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-msmpi"))
+	     $([[ ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-msmpi"))
 options=('!strip')
 source=("https://gitlab.inria.fr/scotch/scotch/-/archive/v${pkgver}/${_realname}-v${pkgver}.tar.gz"
         "Makefile.idx32.inc"
         "Makefile.idx64.inc"
         "0002-pipe-fix.patch"
-        "0004-dummysizes-regex.patch")
+        "0004-dummysizes-regex.patch"
+	"0005-name-suffix.patch")
 sha256sums=('385507a9712bb9057497b9ac3f24ad2132bd3f3f8c7a62e78324fc58f2a0079b'
             '4221b69dcc53230ff4d6bc18e3982f6d39971a99fc17f4dab609fc19b99d8a30'
             'c52bf0598332d8139a37606e7ea9376b7f841059047c0c977b205a763fc7e97a'
             'b6e76b1d2f35b3fcc771b97a35a468d6314ee3a619defef18b82fc7654638a49'
-            '15dd82d4c7b118e08316df4242d647bdaa1f180ff143ee33fe84633c97aac111')
+            '15dd82d4c7b118e08316df4242d647bdaa1f180ff143ee33fe84633c97aac111'
+            '0a90e2a3d83cdef5bb1b4871850ec8852e23992fc920f24f19723994ab0708e4')
 
 prepare() {
   cd "${srcdir}/${_realname}-v${pkgver}"
@@ -58,6 +60,8 @@ _build_scotch() {
     -DBUILD_PTSCOTCH=ON \
     -DBUILD_LIBESMUMPS=ON \
     -DBUILD_LIBSCOTCHMETIS=OFF \
+    -DMPI_THREAD_MULTIPLE=OFF \
+    -DBUILD_PTSCOTCH=ON \
     ../${_realname}-v${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
@@ -68,22 +72,22 @@ build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM}-static-32 && cd "${srcdir}"/build-${MSYSTEM}-static-32
 
   msg2 "Build static Scotch with 32-bit indexing"
-  _build_scotch "-DINTSIZE=32"
+  _build_scotch "-DINTSIZE=32 -DCMAKE_INSTALL_INCLUDEDIR=include/scotch"
   
   mkdir -p "${srcdir}"/build-${MSYSTEM}-shared-32 && cd "${srcdir}"/build-${MSYSTEM}-shared-32
 
   msg2 "Build shared Scotch with 32-bit indexing"
-  _build_scotch "-DINTSIZE=32 -DBUILD_SHARED_LIBS=OFF"
+  _build_scotch "-DINTSIZE=32 -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_INCLUDEDIR=include/scotch"
 
   mkdir -p "${srcdir}"/build-${MSYSTEM}-static-64 && cd "${srcdir}"/build-${MSYSTEM}-static-64
   
   msg2 "Build static Scotch with 64-bit indexing"
-  _build_scotch "-DINTSIZE=64"
+  _build_scotch "-DINTSIZE=64 -DNAME_SUFFIX=_64 -DCMAKE_INSTALL_INCLUDEDIR=include/scotch64"
   
   mkdir -p "${srcdir}"/build-${MSYSTEM}-shared-64 && cd "${srcdir}"/build-${MSYSTEM}-shared-64
   
   msg2 "Build shared Scotch with 64-bit indexing"
-  _build_scotch "-DINTSIZE=64 -DBUILD_SHARED_LIBS=OFF"
+  _build_scotch "-DINTSIZE=64 -DBUILD_SHARED_LIBS=OFF -DNAME_SUFFIX=_64 -DCMAKE_INSTALL_INCLUDEDIR=include/scotch64"
   
 }
 
@@ -126,3 +130,4 @@ for _name in "${pkgname[@]}"; do
   eval "${_func/#${_short}/package_${_name}}"
 done
 # template end;
+#             
