--- a/mingw-w64-scotch/PKGBUILD
+++ b/mingw-w64-scotch/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc='Graph partitioning and sparse matrix ordering package (mingw-w64)'
 pkgver=7.0.5
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url="https://www.labri.fr/perso/pelegrin/scotch/"
 msys2_repository_url="https://gitlab.inria.fr/scotch/scotch"
 license=('spdx:CECILL-C')
@@ -77,7 +77,7 @@ build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM}-shared-32 && cd "${srcdir}"/build-${MSYSTEM}-shared-32
 
   msg2 "Build shared Scotch with 32-bit indexing"
-  _build_scotch "-DINTSIZE=32 -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_INCLUDEDIR=include/scotch"
+  _build_scotch "-DINTSIZE=32 -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_INCLUDEDIR=include/scotch"
 
   mkdir -p "${srcdir}"/build-${MSYSTEM}-static-64 && cd "${srcdir}"/build-${MSYSTEM}-static-64
   
@@ -87,7 +87,7 @@ build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM}-shared-64 && cd "${srcdir}"/build-${MSYSTEM}-shared-64
   
   msg2 "Build shared Scotch with 64-bit indexing"
-  _build_scotch "-DINTSIZE=64 -DBUILD_SHARED_LIBS=OFF -DNAME_SUFFIX=_64 -DCMAKE_INSTALL_INCLUDEDIR=include/scotch64"
+  _build_scotch "-DINTSIZE=64 -DBUILD_SHARED_LIBS=ON -DNAME_SUFFIX=_64 -DCMAKE_INSTALL_INCLUDEDIR=include/scotch64"
   
 }
 
