--- a/mingw-w64-gst-plugins-base/PKGBUILD
+++ b/mingw-w64-gst-plugins-base/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.24.8
 pkgrel=1
 pkgdesc="GStreamer Multimedia Framework Base Plugins (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/"
 license=("LGPL")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gobject-introspection"
