--- a/mingw-w64-libnice/PKGBUILD
+++ b/mingw-w64-libnice/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.1.22
 pkgrel=1
 pkgdesc="An implementation of the IETF's draft ICE (for p2p UDP data streams) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libnice.freedesktop.org/"
 msys2_repository_url="https://gitlab.freedesktop.org/libnice/libnice"
 license=("spdx:LGPL-2.1-only OR MPL-1.1")
