drop some rust reverse-dependencies on clang32

--- a/mingw-w64-ffmpeg/PKGBUILD
+++ b/mingw-w64-ffmpeg/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=7.1
 pkgrel=2
 pkgdesc="Complete solution to record, convert and stream audio and video (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://ffmpeg.org/"
 msys2_repository_url='https://git.ffmpeg.org/ffmpeg.git'
 msys2_references=(
@@ -185,13 +185,14 @@ build() {
   fi
 
   for _variant in -static -shared; do
-    [[ -d "${srcdir}/build-${MSYSTEM}${_variant}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}${_variant}"
     mkdir -p "${srcdir}/build-${MSYSTEM}${_variant}" && cd "${srcdir}/build-${MSYSTEM}${_variant}"
+
     if [[ ${_variant} == -static ]]; then
       ENABLE_VARIANT="--enable-static --pkg-config-flags=--static"
     else
       ENABLE_VARIANT=--enable-shared
     fi
+
     ../${_realname}-${pkgver}/configure \
       --prefix=${MINGW_PREFIX} \
       --target-os=mingw32 \
