--- a/mingw-w64-ffms2/PKGBUILD
+++ b/mingw-w64-ffms2/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=5.0
 pkgrel=2
 pkgdesc="A cross-platform wrapper library around libav/FFmpeg (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/FFMS/ffms2/"
 license=('spdx:MIT')
 options=('staticlibs' 'strip')
