--- a/mingw-w64-gdk-pixbuf2/PKGBUILD
+++ b/mingw-w64-gdk-pixbuf2/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=2.42.12
 pkgrel=3
 pkgdesc="An image loading library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.gnome.org/GNOME/gdk-pixbuf"
 msys2_references=(
   "cpe: cpe:/a:gnome:gdk-pixbuf"
