--- a/mingw-w64-libjxl/PKGBUILD
+++ b/mingw-w64-libjxl/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.11.0
 pkgrel=1
 pkgdesc='JPEG XL image format reference implementation (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/libjxl/libjxl'
 msys2_references=(
   "cpe: cpe:/a:jpeg:jpeg-xl"
