--- a/mingw-w64-libwmf/PKGBUILD
+++ b/mingw-w64-libwmf/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.2.13
 pkgrel=1
 pkgdesc="Library for Converting Metafile Images (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wvWare.sourceforge.io/"
 msys2_references=(
   "cpe: cpe:/a:francis_james_franklin:libwmf"
