--- a/mingw-w64-x264/PKGBUILD
+++ b/mingw-w64-x264/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.164.r3161.a354f11
 pkgrel=3
 pkgdesc="Library for encoding H264/AVC video streams (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.videolan.org/developers/x264.html"
 license=("custom")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
