--- a/mingw-w64-adwaita-icon-theme-legacy/PKGBUILD
+++ b/mingw-w64-adwaita-icon-theme-legacy/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=46.2
 pkgrel=1
 pkgdesc="Icon theme that provides fallback icons for old apps relying on global icon themes (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.gnome.org/GNOME/adwaita-icon-theme-legacy"
 license=("spdx:LGPL-3.0-or-later OR CC-BY-SA-3.0")
 makedepends=(
