--- a/mingw-w64-adwaita-icon-theme/PKGBUILD
+++ b/mingw-w64-adwaita-icon-theme/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=47.0
 pkgrel=1
 pkgdesc="GNOME standard icons (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.gnome.org/GNOME/adwaita-icon-theme"
 license=("spdx:LGPL-3.0-or-later OR CC-BY-SA-3.0")
 makedepends=(
