--- a/mingw-w64-gsettings-desktop-schemas/PKGBUILD
+++ b/mingw-w64-gsettings-desktop-schemas/PKGBUILD
@@ -6,7 +6,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=47.1
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.gnome.org/GNOME/gsettings-desktop-schemas"
 pkgdesc="Shared GSettings schemas for the desktop (mingw-w64)"
 depends=("${MINGW_PACKAGE_PREFIX}-glib2"
