--- a/mingw-w64-libheif/PKGBUILD
+++ b/mingw-w64-libheif/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.18.2
 pkgrel=3
 pkgdesc="HEIF image decoder/encoder library and tools (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/strukturag/libheif"
 msys2_references=(
   "cpe: cpe:/a:struktur:libheif"
