--- a/mingw-w64-libplacebo/PKGBUILD
+++ b/mingw-w64-libplacebo/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=7.349.0
 pkgrel=1
 pkgdesc="Reusable library for GPU-accelerated video/image rendering primitives (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://code.videolan.org/videolan/libplacebo"
 depends=("${MINGW_PACKAGE_PREFIX}-lcms2"
          "${MINGW_PACKAGE_PREFIX}-libdovi"
