--- a/mingw-w64-libproxy/PKGBUILD
+++ b/mingw-w64-libproxy/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.5.9
 pkgrel=1
 pkgdesc="A library that provides automatic proxy configuration management (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libproxy.github.io/libproxy/"
 msys2_references=(
   "cpe: cpe:/a:libproxy_project:libproxy"
