--- a/mingw-w64-librsvg/PKGBUILD
+++ b/mingw-w64-librsvg/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.59.1
 pkgrel=1
 pkgdesc="SVG rendering library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wiki.gnome.org/Projects/LibRsvg"
 msys2_references=(
   "cpe: cpe:/a:gnome:librsvg"
