--- a/mingw-w64-libsoup3/PKGBUILD
+++ b/mingw-w64-libsoup3/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.6.0
 pkgrel=1
 pkgdesc="HTTP client/server library (mingw-w64)"
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: libsoup3'
   "cpe: cpe:/a:gnome:libsoup"
