fix license suffix

--- a/mingw-w64-scotch/PKGBUILD
+++ b/mingw-w64-scotch/PKGBUILD
@@ -30,7 +30,7 @@ sha256sums=('385507a9712bb9057497b9ac3f24ad2132bd3f3f8c7a62e78324fc58f2a0079b'
             'c52bf0598332d8139a37606e7ea9376b7f841059047c0c977b205a763fc7e97a'
             'b6e76b1d2f35b3fcc771b97a35a468d6314ee3a619defef18b82fc7654638a49'
             '15dd82d4c7b118e08316df4242d647bdaa1f180ff143ee33fe84633c97aac111'
-            '0a90e2a3d83cdef5bb1b4871850ec8852e23992fc920f24f19723994ab0708e4')
+            'F782C74476F8A7E3805E452D93FEF826455F1D84F689E0EDF5562E32BE2A6C51')
 
 prepare() {
   cd "${srcdir}/${_realname}-v${pkgver}"
@@ -116,7 +116,7 @@ package_scotch64() {
   # Shared Install
   cd "${srcdir}"/build-${MSYSTEM}-shared-64
   DESTDIR=${pkgdir} cmake --install . 
-  install -Dm644 "${srcdir}"/${_realname}-v${pkgver}/doc/CeCILL-C_V1-en.txt "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 "${srcdir}"/${_realname}-v${pkgver}/doc/CeCILL-C_V1-en.txt "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}64/LICENSE
 }
 
 
@@ -130,4 +130,3 @@ for _name in "${pkgname[@]}"; do
   eval "${_func/#${_short}/package_${_name}}"
 done
 # template end;
-#             
