--- a/mingw-w64-python-pyopenssl/PKGBUILD
+++ b/mingw-w64-python-pyopenssl/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Python wrapper module around the OpenSSL library (mingw-w64)"
 url='https://www.pyopenssl.org'
 license=('spdx:Apache-2.0')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-pyopenssl'
   'pypi: pyOpenSSL'
