--- a/mingw-w64-python-setuptools-rust/PKGBUILD
+++ b/mingw-w64-python-setuptools-rust/PKGBUILD
@@ -13,7 +13,7 @@ msys2_references=(
 )
 license=('spdx:MIT')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 depends=("${MINGW_PACKAGE_PREFIX}-rust"
          "${MINGW_PACKAGE_PREFIX}-python-semantic-version"
          "${MINGW_PACKAGE_PREFIX}-python-setuptools")
