python-urllib3: update to 1.26.20

--- a/mingw-w64-python-urllib3/PKGBUILD
+++ b/mingw-w64-python-urllib3/PKGBUILD
@@ -3,36 +3,47 @@
 _realname=urllib3
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.26.19
+pkgver=1.26.20
 pkgrel=1
 pkgdesc="HTTP library with thread-safe connection pooling and file post support (mingw-w64)"
 arch=('any')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+url='https://urllib3.readthedocs.io/'
+msys2_repository_url='https://github.com/urllib3/urllib3'
 msys2_references=(
+  'archlinux: python-urllib3'
   'pypi: urllib3'
   "cpe: cpe:/a:python:urllib3"
 )
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
-msys2_repository_url='https://github.com/urllib3/urllib3'
-url='https://urllib3.readthedocs.io/'
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-certifi"
-         "${MINGW_PACKAGE_PREFIX}-python-idna")
+depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel"
-             "${MINGW_PACKAGE_PREFIX}-python-ndg-httpsclient"
-             "${MINGW_PACKAGE_PREFIX}-python-pyasn1"
-             "${MINGW_PACKAGE_PREFIX}-python-pyopenssl"
-             #"${MINGW_PACKAGE_PREFIX}-python-pysocks"
-             "${MINGW_PACKAGE_PREFIX}-python-mock")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-nose"
-              "${MINGW_PACKAGE_PREFIX}-python-tornado"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+if [[ ${CARCH} != i686 ]]; then
+optdepends=("${MINGW_PACKAGE_PREFIX}-python-brotli: Brotli support"
+            "${MINGW_PACKAGE_PREFIX}-python-certifi: security support"
+            "${MINGW_PACKAGE_PREFIX}-python-cryptography: security support"
+            "${MINGW_PACKAGE_PREFIX}-python-idna: security support"
+            "${MINGW_PACKAGE_PREFIX}-python-pyopenssl: security support"
+            "${MINGW_PACKAGE_PREFIX}-python-pysocks: SOCKS support")
+fi
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-brotli"
+              "${MINGW_PACKAGE_PREFIX}-python-certifi"
+              "${MINGW_PACKAGE_PREFIX}-python-cryptography"
+              "${MINGW_PACKAGE_PREFIX}-python-idna"
+              "${MINGW_PACKAGE_PREFIX}-python-pyopenssl"
+              "${MINGW_PACKAGE_PREFIX}-python-pysocks"
               "${MINGW_PACKAGE_PREFIX}-python-coverage"
-              "${MINGW_PACKAGE_PREFIX}-python-psutil")
+              "${MINGW_PACKAGE_PREFIX}-python-dateutil"
+              "${MINGW_PACKAGE_PREFIX}-python-flaky"
+              "${MINGW_PACKAGE_PREFIX}-python-mock"
+              "${MINGW_PACKAGE_PREFIX}-python-pytest"
+              "${MINGW_PACKAGE_PREFIX}-python-pytest-timeout"
+              "${MINGW_PACKAGE_PREFIX}-python-tornado"
+              "${MINGW_PACKAGE_PREFIX}-python-trustme")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('3e3d753a8618b86d7de333b4223005f68720bcd6a7d2bcb9fbd2229ec7c1e429')
+sha256sums=('40c2dc0c681e47eb8f90e7e27bf6ff7df2e677421fd46756da1161c39ca70d32')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
@@ -46,5 +57,5 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
+  install -Dm644 LICENSE.txt "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt
 }
